# src/auth/auth.controller.ts
@@ -6,14 +6,17 @@ import {
   Param,
   Post,
   Query,
+  UseGuards,
   UseInterceptors,
 } from '@nestjs/common';
-import { ApiResponse } from '@nestjs/swagger';
-import { AuthService } from './auth.service';
+import { ApiBearerAuth, ApiResponse } from '@nestjs/swagger';
+import { AuthResponse, AuthService } from './auth.service';
 import { AuthCredentialsDto } from './dto/auth-credentials.dto';
+import { AuthResponseDto } from './dto/auth-response.dto';
 import { CreateUserDto } from './dto/create-user.dto';
 import { UserFilterDto } from './dto/user-filter.dto';
 import { User } from './entities/user.entity';
+import { JwtAuthGuard } from './guards/jwt-auth.guard';
 import { UserResponse } from './user.repository';
 
 @Controller('/')
@@ -25,9 +28,9 @@ export class AuthController {
   @ApiResponse({
     status: 200,
     description: 'The user has been successfully created.',
-    type: User,
+    type: AuthResponseDto,
   })
-  async signUp(@Body() createUserDto: CreateUserDto): Promise<User> {
+  async signUp(@Body() createUserDto: CreateUserDto): Promise<AuthResponse> {
     return this.authService.signUp(createUserDto);
   }
 
@@ -36,14 +39,18 @@ export class AuthController {
   @ApiResponse({
     status: 200,
     description: 'The user has been successfully logged in.',
-    type: User,
+    type: AuthResponseDto,
   })
-  async login(@Body() AuthCredentialsDto: AuthCredentialsDto): Promise<User> {
+  async login(
+    @Body() AuthCredentialsDto: AuthCredentialsDto,
+  ): Promise<AuthResponse> {
     return this.authService.login(AuthCredentialsDto);
   }
 
+  @UseGuards(JwtAuthGuard)
   @UseInterceptors(ClassSerializerInterceptor)
   @Get('/users')
+  @ApiBearerAuth()
   @ApiResponse({
     status: 200,
     description: 'Get all users',
@@ -53,8 +60,10 @@ export class AuthController {
     return this.authService.getUsers(filterDto);
   }
 
+  @UseGuards(JwtAuthGuard)
   @UseInterceptors(ClassSerializerInterceptor)
   @Get('/users/:id')
+  @ApiBearerAuth()
   @ApiResponse({
     status: 200,
     description: 'Get a user by id',
