# src/auth/dto/auth-response.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { User } from '../entities/user.entity';
+
+export class AuthResponseDto {
+  @ApiProperty({ type: User })
+  user: User;
+
+  @ApiProperty()
+  accessToken: string;
+}
